solved dark mode problem

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -45,14 +45,14 @@
 }
 
 body {
-    background-color: var(--Very-light-gray);
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: var(--Very-light-gray);
 }
 
-.body-dark{
-    background-color: var(--Very-dark-desaturated-blue-3);
+body.body-dark{
+    background-color: var(--Very-dark-desaturated-blue-3) !important;
 }
 
 .navbar {
@@ -459,7 +459,6 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #f4f6f8;
 }
 
 .main-content-layout {
